kubeInventory/inventory_web_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-order-luris-deployment
  namespace: luris-final-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-order-luris
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: inventory-order-luris
    spec:
      containers:
      - name: inventory-order-luris
        image: luris26/inventory:$GITHUB_RUN_ID
        ports:
        - containerPort: 80
