kubeInventory/inventory_web_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: inventory-order-luris-service
  namespace: luris-final-project
spec:
  selector:
    app: inventory-order-luris
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
